# yolov8-TensorRT-camera

./: CMakeLists.txt  coco.txt  yolov8_TensorRT.cpp
include/: Logger.h  PostProcess.h  read_csv.h  yolov8_TensorRT.h
src/: PostProcess.cpp  read_csv.cpp
